<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/repeating_texture" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content"
        <LinearLayout android:orientation="vertical" android:background="@color/color_nebula_selected" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_small">
            <TextView android:textAppearance="?unknown_attr_ref: 1010040" android:textStyle="bold" android:textColor="0x106000b" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/TextView_Title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_medium" android:text="@string/string_about_title" />
            <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:textStyle="italic" android:textColor="0x106000b" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/TextView_SubTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_small" android:layout_marginBottom="@dimen/margin_medium" android:text="@string/string_about_subtitle" />
        </LinearLayout>
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textStyle="bold" android:textColor="@color/color_nebula_selected" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/TextView_Credits" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_tiny" android:layout_marginBottom="@dimen/margin_tiny" android:text="@string/string_about_programmer" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:textColor="@color/color_nebula_selected" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_tiny" android:text="@string/string_about_author" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textStyle="bold" android:textColor="@color/color_nebula_selected" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_small" android:layout_marginBottom="@dimen/margin_tiny" android:text="@string/string_about_licenses" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:textColor="@color/color_nebula_selected" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_small" android:text="@string/string_about_license" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:textColor="@color/color_nebula_selected" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_small" android:text="@string/string_about_theme_license" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:textColor="@color/color_nebula_selected" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_small" android:layout_marginRight="@dimen/margin_small" android:layout_marginBottom="@dimen/margin_small" android:text="@string/string_about_icon_license" />
        <Button android:enabled="true" android:textSize="@dimen/font_medium" android:textColor="0x106000b" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/button_quit" android:background="@drawable/button_purple_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_small" android:layout_marginBottom="@dimen/margin_small" android:text="@string/string_about_quit" />
    </LinearLayout>
</ScrollView>
