<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/repeating_texture" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="24sp" android:textColor="@color/color_nebula_selected" android:id="@+id/TextView_Title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_small" android:layout_marginTop="@dimen/margin_small" android:layout_marginBottom="15dp" android:text="@string/string_challenge_one_title" />
        <View android:background="@color/color_nebula_selected" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x301" android:layout_marginLeft="@dimen/margin_small" android:layout_marginBottom="30dp" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textColor="@color/color_nebula_dark" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/TextView_Challenge_Intro" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_small" android:layout_marginRight="@dimen/margin_small" android:layout_marginBottom="@dimen/margin_medium" android:text="@string/string_challenge_one_intro" />
        <EditText android:enabled="true" android:textColor="@color/color_nebula_dark" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/challenge_one_text_guess" android:layout_width="UNKNOWN_DATA_0xfa01" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_medium" android:text="@string/string_challenge_guess" android:width="200dp" android:singleLine="true" android:editable="true" />
        <LinearLayout android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_small">
            <Button android:enabled="true" android:textSize="16sp" android:textColor="#ffffff" android:id="@+id/challenge_one_button_check" android:background="@drawable/button_purple_small" android:focusable="true" android:layout_width="UNKNOWN_DATA_0x6401" android:layout_height="UNKNOWN_DATA_0x2801" android:layout_marginRight="@dimen/margin_medium" android:text="@string/string_challenge_check" />
            <Button android:enabled="true" android:textSize="16sp" android:textColor="#ffffff" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/button_write_file" android:background="@drawable/button_purple_small" android:focusable="true" android:layout_width="UNKNOWN_DATA_0x6401" android:layout_height="UNKNOWN_DATA_0x2801" android:text="@string/string_challenge_write_file" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
